@@ -27,14 +27,14 @@ labels:
 
 images:
   tags:
-    deckhand: quay.io/airshipit/deckhand:latestlatest-ubuntu_focal
-    dep_check: quay.io/airshipit/kubernetes-entrypoint:v1.0.0
-    db_init: docker.io/postgres:14.8
-    db_sync: quay.io/airshipit/deckhand:latest-ubuntu_focal
-    image_repo_sync: docker.io/docker:23.0.3
-    ks_endpoints: docker.io/openstackhelm/heat:wallaby-ubuntu_focal
-    ks_service: docker.io/openstackhelm/heat:wallaby-ubuntu_focal
-    ks_user: docker.io/openstackhelm/heat:wallaby-ubuntu_focal
+    deckhand: quay.io/airshipit/deckhand:latest-ubuntu_jammy
+    dep_check: quay.io/airshipit/kubernetes-entrypoint:latest-ubuntu_jammy
+    db_init: quay.io/airshipit/postgres:14.8
+    db_sync: quay.io/airshipit/deckhand:latest-ubuntu_jammy
+    image_repo_sync: quay.io/airshipit/docker:27.5.0
+    ks_endpoints: quay.io/airshipit/heat:2024.1-ubuntu_jammy
+    ks_service: quay.io/airshipit/heat:2024.1-ubuntu_jammy
+    ks_user: quay.io/airshipit/heat:2024.1-ubuntu_jammy
   pull_policy: "IfNotPresent"
   local_registry:
     active: false
