@@ -1,51 +1,50 @@
-alembic==1.14.0
+alembic==1.16.1
 amqp==5.3.1
-attrs==24.2.0
+attrs==25.3.0
 autopage==0.5.2
 barbican==18.0.0
-bcrypt==4.2.1
+bcrypt==4.3.0
 Beaker==1.13.0
-cachetools==5.5.0
-castellan==5.2.0
-certifi==2024.8.30
+cachetools==5.5.2
+castellan==5.3.0
+certifi==2025.4.26
 cffi==1.17.1
-charset-normalizer==3.4.0
-cliff==4.8.0
-cmd2==2.5.8
+charset-normalizer==3.4.2
+cliff==4.10.0
+cmd2==2.6.1
 cryptography==42.0.8
 debtcollector==3.0.0
-decorator==5.1.1
-deepdiff==8.1.1
+decorator==5.2.1
+deepdiff==8.5.0
 dnspython==2.7.0
-dogpile.cache==1.3.3
-eventlet==0.38.1
+dogpile.cache==1.4.0
+eventlet==0.40.0
 falcon==4.0.2
 fasteners==0.19
-fixtures==4.1.0
-futurist==3.0.0
-greenlet==3.1.1
+fixtures==4.2.5
+futurist==3.1.1
+greenlet==3.2.2
 html5lib==0.9999999
 httpexceptor==1.4.0
 idna==3.10
 iso8601==2.1.0
-Jinja2==3.1.4
+Jinja2==3.1.6
 jsonpath-ng==1.7.0
 jsonpickle==3.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
+jsonschema==4.24.0
+jsonschema-specifications==2025.4.1
 keystoneauth1==5.6.0
 keystonemiddleware==10.6.0
-kombu==5.4.2
+kombu==5.5.4
 ldap3==2.9.1
-logutils==0.3.5
-Mako==1.3.8
+Mako==1.3.10
 MarkupSafe==3.0.2
 microversion-parse==2.0.0
 msgpack==1.1.0
 netaddr==1.3.0
 netifaces==0.11.0
 networkx==3.4.2
-orderly-set==5.2.3
+orderly-set==5.4.1
 os-service-types==1.7.0
 oslo.cache==3.7.0
 oslo.concurrency==6.0.0
@@ -63,59 +62,59 @@ oslo.service==3.4.1
 oslo.upgradecheck==2.3.0
 oslo.utils==7.1.0
 oslo.versionedobjects==3.3.0
-packaging==24.2
+packaging==25.0
 Paste==3.10.1
 PasteDeploy==3.1.0
-PasteScript==3.6.0
-pbr==6.1.0
-pecan==1.5.1
-pip==24.1
+PasteScript==3.7.0
+pbr==6.1.1
+pecan==1.6.0
+pip==24.3.1
 ply==3.11
-prettytable==3.12.0
-prometheus_client==0.21.1
+prettytable==3.16.0
+prometheus_client==0.22.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
-pycadf==4.0.0
+pycadf==4.0.1
 pycparser==2.22
 PyJWT==2.10.1
 pylibyaml==0.1.0
-pyOpenSSL==24.3.0
-pyparsing==3.2.0
+pyOpenSSL==25.1.0
+pyparsing==3.2.3
 pyperclip==1.9.0
 python-barbicanclient==5.7.0
 python-dateutil==2.9.0.post0
 python-keystoneclient==5.4.0
 python-memcached==1.62
 python-mimeparse==2.0.0
-pytz==2024.2
 PyYAML==6.0.2
-referencing==0.35.1
+referencing==0.36.2
 repoze.lru==0.7
 requests==2.32.3
 resolver==0.2.1
 rfc3986==2.0.0
 Routes==2.5.1
-rpds-py==0.22.3
+rpds-py==0.25.1
 selector==0.10.1
-setuptools==70.1.0
-simplejson==3.19.3
+setuptools==75.8.0
+simplejson==3.20.1
 six==1.17.0
 SQLAlchemy==1.4.54
 statsd==4.0.1
-stevedore==5.4.0
-testresources==2.0.1
+stevedore==5.4.1
+testresources==2.0.2
 testscenarios==0.5.0
 testtools==2.7.2
 tiddlyweb==2.4.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-uWSGI==2.0.28
+tomli==2.2.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+uWSGI==2.0.30
 vine==5.1.0
 wcwidth==0.2.13
 WebOb==1.8.9
 Werkzeug==2.2.3
-wheel==0.43.0
-wrapt==1.17.0
+wheel==0.45.1
+wrapt==1.17.2
 xattr==0.10.1
 yappi==1.6.10
